otp and redis confirmed
